<resources>
    <string name="app_name">LivelyLauncher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search Apps...</string>
    <string name="button_start_speaking">Start Speaking</string>
    <string name="button_stop_speaking">Stop Speaking</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="allApps">us.nijikon.livelyLauncher.All_APPS_SHARED_PREFERENCE</string>
    <string name="writeFileFlag">us.nijikon.livelyLauncher.APPS_WRITE_FLAG</string>
    <string name="update">us.nijikon.livelyLauncher.UP_DATE</string>


    <string name="last_update_time">Last Update Time: %s</string>
    <string name="weather_condition">Weather: %s</string>
    <string name="current_temperature">Temperature: %.2f</string>
    <string name="min_temperature">Min: %.2f</string>
    <string name="max_temperature">Max: %.2f</string>
    <string name="wind_speed">Wind Speed: %s</string>
    <string name="wind_degree">Wind Degree: %s</string>
    <string name="open_weather_map_app_id">dd949db9a330b0ac87cac42dbb3b90d8</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCzNxy2w4A0lhnnSrY3ncfW9OXoLkgVxpQ</string>


    <string name="close_button">close</string>
</resources>
