<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_fragment"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/primaryBack"
    android:clickable="true"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/image_weather_condition"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:textColor="@color/primaryText"
                android:id="@+id/text_weather_condition"
                android:text="@string/weather_condition"
                android:textSize="30sp"
                android:maxWidth="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/primaryText"
                android:id="@+id/text_current_temperature"
                android:text="@string/current_temperature"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/primaryText"
                android:id="@+id/text_min_temperature"
                android:text="@string/min_temperature"
                android:layout_margin="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/primaryText"
                android:id="@+id/text_max_temperature"
                android:text="@string/max_temperature"
                android:layout_margin="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/primaryText"
                android:id="@+id/text_wind_speed"
                android:text="@string/wind_speed"
                android:layout_margin="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/primaryText"
                android:id="@+id/text_wind_degree"
                android:text="@string/wind_degree"
                android:layout_margin="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
